TS7200: Defer event counter registration until after evcnt is initialized

Patch from Lloyd Parkes <lloyd@must-have-coffee.gen.nz> in PR# kern/57386